@@ -1,3 +1,8 @@
+2004-11-09  Andrew Cagney  <cagney@gnu.org>
+
+	* i386-linux-tdep.c: Include "dwarf2-frame.h".
+	* Makefile.in: Update all dependencies.
+
 2004-11-08  Andrew Cagney  <cagney@gnu.org>
 
 	* sentinel-frame.c (sentinel_frame_prev_pc): New function.
